--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "builds": [
-    { "src": "index.html", "use": "@vercel/static-build", "config": {} }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/" }
-  ]
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
+    ]
 }
